--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <meta name="description" content="Acceleration calculator for lords mobile">
   <meta name="keywords" content="Lords Mobile, acceleration, accelerator, acc, calculator">
   <meta name="author" content="Rafael Bernardo">
+  <meta name="google-site-verification" content="OyyjXNoaW2kic_9L3L2kit9YN5aSAfBninO8yyGfmfk" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -15,8 +16,9 @@
 <body>
   <app-root></app-root>
 
-  <script src="/__/firebase/7.21.1/firebase-app.js"></script>
-  <script src="/__/firebase/7.21.1/firebase-analytics.js"></script>
-  <script src="/__/firebase/init.js"></script>
+  <script defer src="/__/firebase/7.21.1/firebase-app.js"></script>
+  <script defer src="/__/firebase/7.21.1/firebase-analytics.js"></script>
+  <script defer src="/__/firebase/init.js"></script>
+  <script defer src="/init.js"></script>
 </body>
 </html>
